--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/BellTest
+/BellTest/obj
+/BellTest/bin/Debug
